# coding: utf-8


class Habilidad():
    def __init__(self, nombre, danyo):
        self.nombre=nombre
        self.danyo=danyo